<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Beacon Mission Manager</string>
    <string name="settings">Settings</string>
    <string name="noapikey">No API Key</string>
    <string name="apikey">API Key: </string>
    <string name="about">For search and rescue and stuff. But mostly just search and rescue.</string>
    <string name="nodata">No Data</string>
    <string name="loading">Loading, please wait...</string>
    <string name="settingsfile">beacon.settings.txt</string>
    
    <string name="text_label_size">10sp</string>
    <string name="text_value_size">16sp</string>
    <string name="text_value_padding_top">10dp</string>
    <string name="text_value_padding_bottom">10dp</string>
    <string name="text_value_padding_left">10dp</string>
    <string name="text_value_padding_right">10dp</string>

    <string name="settings_apikey">API Key</string>
    <string name="settings_apikey_prompt">Enter your API key</string>
    <string name="settings_usegps">Use GPS</string>
    <string name="settings_usegps_summary">Turn On GPS</string>
    <string name="settings_gpsupdateinterval">GPS Update Interval</string>
    <string name="settings_gpsupdateinterval_summary">How Often To Upload Location Updates</string>
    <string name="settings_sendGpsUpdates">Send GPS Updates</string>
    <string name="settings_sendGpsUpdates_summary">Automatically Record GPS Location</string>
    <string name="settings_missionFontSize">Mission Font Size</string>
    <string name="settings_missionFontSize_default">20</string>
    <string name="settings_missionFontSize_summary">Text Size of Mission Name</string>

    <string name="info_subjects">Subject Info</string>
    <string name="info_command">Command Info</string>

    <string name="subject_name">Subject Name</string>
    <string name="subject_nickname">Nickname</string>
    <string name="subject_sex">Sex</string>
    <string name="subject_age">Age</string>
    <string name="subject_height">Height</string>
    <string name="subject_weight">Weight</string>
    <string name="subject_eyeColor">Eye Color</string>
    <string name="subject_hairColor">Hair Color</string>
    <string name="subject_dateLastSeen">Date Last Seen</string>
    <string name="subject_timeLastSeen">Time Last Seen</string>
    <string name="subject_lastLocation">Last Location</string>
    <string name="subject_lastGps">Last Gps</string>
    <string name="subject_hairStyle">Hair Style</string>
    <string name="subject_complexion">Complexion</string>
    <string name="subject_build">Build</string>
    <string name="subject_shirt">Shirt</string>
    <string name="subject_pants">Pants</string>
    <string name="subject_jacket">Jacket</string>
    <string name="subject_shoes">Shoes</string>
    <string name="subject_socks">Socks</string>
    <string name="subject_gloves">Gloves</string>
    <string name="subject_innerWear">Inner Wear</string>
    <string name="subject_outerWear">Outer Wear</string>
    <string name="subject_">Subject </string>
</resources>
