<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/subject_name"
                android:textSize="@dimen/label_size"
                />
        <TextView
                android:id="@+id/subjectName"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/nodata"
                android:textSize="@dimen/value_size"
                android:paddingTop="@dimen/value_padding_top"
                android:paddingBottom="@dimen/value_padding_bottom"
                android:paddingLeft="@dimen/value_padding_left"
                android:paddingRight="@dimen/value_padding_right"
                />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/subject_nickname"
                android:textSize="@dimen/label_size"
                />
        <TextView
                android:id="@+id/subjectNickname"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/nodata"
                android:textSize="@dimen/value_size"
                android:paddingTop="@dimen/value_padding_top"
                android:paddingBottom="@dimen/value_padding_bottom"
                android:paddingLeft="@dimen/value_padding_left"
                android:paddingRight="@dimen/value_padding_right"
                />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/subject_sex"
                android:textSize="@dimen/label_size"
                />
        <TextView
                android:id="@+id/subjectSex"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/nodata"
                android:textSize="@dimen/value_size"
                android:paddingTop="@dimen/value_padding_top"
                android:paddingBottom="@dimen/value_padding_bottom"
                android:paddingLeft="@dimen/value_padding_left"
                android:paddingRight="@dimen/value_padding_right"
                />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/subject_age"
                android:textSize="@dimen/label_size"
                />
        <TextView
                android:id="@+id/subjectAge"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/nodata"
                android:textSize="@dimen/value_size"
                android:paddingTop="@dimen/value_padding_top"
                android:paddingBottom="@dimen/value_padding_bottom"
                android:paddingLeft="@dimen/value_padding_left"
                android:paddingRight="@dimen/value_padding_right"
                />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/subject_height"
                android:textSize="@dimen/label_size"
                />
        <TextView
                android:id="@+id/subjectHeight"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/nodata"
                android:textSize="@dimen/value_size"
                android:paddingTop="@dimen/value_padding_top"
                android:paddingBottom="@dimen/value_padding_bottom"
                android:paddingLeft="@dimen/value_padding_left"
                android:paddingRight="@dimen/value_padding_right"
                />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/subject_weight"
                android:textSize="@dimen/label_size"
                />
        <TextView
                android:id="@+id/subjectWeight"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/nodata"
                android:textSize="@dimen/value_size"
                android:paddingTop="@dimen/value_padding_top"
                android:paddingBottom="@dimen/value_padding_bottom"
                android:paddingLeft="@dimen/value_padding_left"
                android:paddingRight="@dimen/value_padding_right"
                />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/subject_eyeColor"
                android:textSize="@dimen/label_size"
                />
        <TextView
                android:id="@+id/subjectEyeColor"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/nodata"
                android:textSize="@dimen/value_size"
                android:paddingTop="@dimen/value_padding_top"
                android:paddingBottom="@dimen/value_padding_bottom"
                android:paddingLeft="@dimen/value_padding_left"
                android:paddingRight="@dimen/value_padding_right"
                />
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/subject_hairColor"
                android:textSize="@dimen/label_size"
                />
        <TextView
                android:id="@+id/subjectHairColor"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/nodata"
                android:textSize="@dimen/value_size"
                android:paddingTop="@dimen/value_padding_top"
                android:paddingBottom="@dimen/value_padding_bottom"
                android:paddingLeft="@dimen/value_padding_left"
                android:paddingRight="@dimen/value_padding_right"
                />
    </LinearLayout>
</ScrollView>
